--- a/.github/workflows/run-newman-tests.yml
+++ b/.github/workflows/run-newman-tests.yml
@@ -14,12 +14,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # upgraded to v3
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3  # upgraded to v3
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'  # updated from 14 to 16 for Newman compatibility
+          node-version: '16'  # Newman requires Node 16+
 
       - name: Install Newman
         run: npm install -g newman
@@ -29,10 +29,10 @@ jobs:
           newman run "postman/GoRest API- CRUD Operations.postman_collection.json" \
             -e "postman/GoRest-QA.postman_environment.json" \
             -d "data/GoRest.csv" \
-            -r cli,html --reporter-html-export newman-report.html
+            -r cli,html --reporter-html-export ./newman-report.html
 
       - name: Upload Newman Report
         uses: actions/upload-artifact@v4
         with:
           name: newman-report
-          path: newman-report.html
+          path: ./newman-report.html
