--- a/.github/workflows/run-newman-tests.yml
+++ b/.github/workflows/run-newman-tests.yml
@@ -31,6 +31,9 @@ jobs:
             -d "data/GoRest.csv" \
             -r cli,html --reporter-html-export ./newman-report.html
 
+      - name: List files in workspace
+        run: ls -R
+
       - name: Upload Newman Report
         uses: actions/upload-artifact@v4
         with:
